# WindowsAudioManager

./: .gitignore  CMakeLists.txt  LIBRARYUSAGE.md  README.md
include/AudioSwitcher/: AudioInputSwitcher.h  AudioSwitcher.h
include/Utility/: COMInitializer.h  DeviceFormatInfo.h  DeviceUtils.h  SafeRelease.h
src/AudioSwitcher/: AudioInputSwitcher.cpp  AudioSwitcherDummy.cpp
src/Utility/: DeviceUtils.cpp
test/: main.cpp  main.txt
